// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders link 1`] = `
<View
  focusable={true}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  The Times
</View>
`;

exports[`2. renders link with target 1`] = `
<View
  focusable={true}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  The Times
</View>
`;

exports[`3. renders text link 1`] = `
<Text
  accessibilityRole="link"
  style={
    Object {
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;

exports[`4. text link with multiple styles 1`] = `
<Text
  accessibilityRole="link"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;

exports[`5. text link with children 1`] = `
<Text
  accessibilityRole="link"
  style={
    Object {
      "textDecorationLine": "underline",
    }
  }
>
  <Text>
    The Times
  </Text>
</Text>
`;

exports[`6. text link with target 1`] = `
<Text
  accessibilityRole="link"
  style={
    Object {
      "textDecorationLine": "underline",
    }
  }
  target="_blank"
>
  <Text>
    The Times
  </Text>
</Text>
`;
